--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "glicko2": "^0.8.7",
     "next": "13.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sharp": "^0.31.1"
   },
   "devDependencies": {
     "@types/node": "18.11.7",
